; ModuleID = '/home/carl/AnghaBench/kphp-kdb/isearch/extr_isearch-data.c_black_list_force.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/isearch/extr_isearch-data.c_black_list_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@aho_black_list = common dso_local global i32 0, align 4
@aho_black_list_size = common dso_local global i32 0, align 4
@black_list = common dso_local global i32 0, align 4
@buff = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @black_list_force() #0 {
  %1 = load i32, i32* @aho_black_list, align 4
  %2 = load i32, i32* @aho_black_list_size, align 4
  %3 = call i32 @dl_free(i32 %1, i32 %2)
  %4 = load i32, i32* @black_list, align 4
  %5 = load i64, i64* @buff, align 8
  %6 = call i32 @trie_encode(i32 %4, i64 %5, i32 0)
  store i32 %6, i32* @aho_black_list_size, align 4
  %7 = load i64, i64* @buff, align 8
  %8 = inttoptr i64 %7 to i32*
  %9 = call i32 @trie_arr_aho(i32* %8)
  %10 = load i32, i32* @aho_black_list_size, align 4
  %11 = call i32 @dl_malloc(i32 %10)
  store i32 %11, i32* @aho_black_list, align 4
  %12 = load i32, i32* @aho_black_list, align 4
  %13 = load i64, i64* @buff, align 8
  %14 = load i32, i32* @aho_black_list_size, align 4
  %15 = call i32 @memcpy(i32 %12, i64 %13, i32 %14)
  ret void
}

declare dso_local i32 @dl_free(i32, i32) #1

declare dso_local i32 @trie_encode(i32, i64, i32) #1

declare dso_local i32 @trie_arr_aho(i32*) #1

declare dso_local i32 @dl_malloc(i32) #1

declare dso_local i32 @memcpy(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
